Bootstrap lecture sm xs md lg

--- a/week2/day5/bootstrap_lecture/views/layout.erb
+++ b/week2/day5/bootstrap_lecture/views/layout.erb
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <meta charset="UTF-8">
-    <title>Movie Finder</title>
+    <title>BootStrap Lecture</title>
 </head>
 <body>
     <%= yield %>
