--- a/week2/day5/bootstrap_lecture/views/index.erb
+++ b/week2/day5/bootstrap_lecture/views/index.erb
@@ -1,5 +1,27 @@
 <div class="container">
     <div class = "row">
-        
+        <div class="col-lg-6 left">Left</div>
+        <div class="col-lg-6 right">Right</div>    
+    </div>
+</div>
+
+<div class="container">
+    <div class = "row">
+        <div class="col-md-6 left">Left</div>
+        <div class="col-md-6 right">Right</div>    
+    </div>
+</div>
+
+<div class="container">
+    <div class = "row">
+        <div class="col-sm-6 left">Left</div>
+        <div class="col-sm-6 right">Right</div>    
+    </div>
+</div>
+
+<div class="container">
+    <div class = "row">
+        <div class="col-xs-6 col-sm-3 col-lg-9 left">Left</div>
+        <div class="col-xs-6 col-sm-9 col-lg-3 right">Right</div>    
     </div>
 </div>
