--- a/week2/omdb_mini_project/views/layout.erb
+++ b/week2/omdb_mini_project/views/layout.erb
@@ -1,10 +1,27 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/style.css"/>
+
+    <script src="/scripts/jquery-2.0.3.min.js"></script>
+    <script src="/scripts/bootstrap.min.js"></script>
     <meta charset="UTF-8">
     <title>Movie Finder</title>
 </head>
 <body>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <a class="navbar-brand" href="#">Movie Finder</a>
+    <form class="navbar-form navbar-left" role="search" action="/" method="POST">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form> 
+  </div>
+</nav>
     <%= yield %>
 </body>
 </html>
