--- a/week2/omdb_mini_project/views/layout.erb
+++ b/week2/omdb_mini_project/views/layout.erb
@@ -11,15 +11,14 @@
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <a class="navbar-brand" href="#">Movie Finder</a>
     <form class="navbar-form navbar-left" role="search" action="/" method="POST">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
+        <input type="text" class="form-control" name="s" placeholder="">
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
-    </form> 
+    </form>
   </div>
 </nav>
     <%= yield %>
