--- a/week2/omdb_mini_project/public/css/style.css
+++ b/week2/omdb_mini_project/public/css/style.css
@@ -1,3 +1,13 @@
 body {
-    /*padding-top: 70px; */
+    padding-top: 70px;
+    background-color: white;
+}
+
+.imgdiv {
+    width: 100%;
+    height: 100%;
+}
+
+.row {
+    padding: 0 10 0 10;
 }
