--- a/week2/omdb_mini_project/views/layout.erb
+++ b/week2/omdb_mini_project/views/layout.erb
@@ -10,7 +10,7 @@
     <title>Movie Finder</title>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="navbar-header">
     <a class="navbar-brand" href="#">Movie Finder</a>
     <form class="navbar-form navbar-left" role="search" action="/" method="POST">
