--- a/week2/omdb_mini_project/public/css/style.css
+++ b/week2/omdb_mini_project/public/css/style.css
@@ -7,11 +7,10 @@ body {
     width: 100%;
     height: 100%;
 }
-
-.left {
-    float: left;
+  
+.navbar .btn-navbar {
+    display: none;
 }
-
 /*.row {
     padding: 0 10 0 10;
     height: 120px;
