finished omdb mini project

--- a/week2/omdb_mini_project/views/index.erb
+++ b/week2/omdb_mini_project/views/index.erb
@@ -7,10 +7,10 @@
     </div>
         <div class = "row">
 <% end %>
-    <div class=" visible-xs col-xs-6">
+    <div class="visible-xs col-xs-6">
       <div class="">
-    <a href="#" id="<%=m.id%>"  rel="popover" data-content="<%=m.ad["Plot"]%>" data-original-title="<%=m.title%>">
-        <img class="imgdiv" src="<%=m.ad["Poster"]%>"/>
+    <a href="/show/<%=m.id%>">
+        <img class="sm-poster imgdiv" src="<%=m.ad["Poster"]%>"/>
         <h4><%=m.title%></h4>
     </a>
   </div></div>
@@ -20,10 +20,10 @@
     </div>
         <div class = "row">
 <% end %>
-    <div class=" visible-sm col-sm-4">
+    <div class="visible-sm col-sm-4">
       <div class="">
-    <a href="#" id="<%=m.id%>"  rel="popover" data-content="<%=m.ad["Plot"]%>" data-original-title="<%=m.title%>">
-        <img class="imgdiv" src="<%=m.ad["Poster"]%>"/>
+    <a href="/show/<%=m.id%>">
+        <img class="sm-poster imgdiv" src="<%=m.ad["Poster"]%>"/>
         <h4><%=m.title%></h4>
     </a>
   </div></div>
@@ -35,8 +35,8 @@
 <% end %>
     <div class=" visible-md col-md-3">
       <div class="">
-    <a href="#" id="<%=m.id%>"  rel="popover" data-content="<%=m.ad["Plot"]%>" data-original-title="<%=m.title%>">
-        <img class="imgdiv" src="<%=m.ad["Poster"]%>"/>
+    <a href="/show/<%=m.id%>">
+        <img class="sm-poster imgdiv" src="<%=m.ad["Poster"]%>"/>
         <h4><%=m.title%></h4>
     </a>
   </div></div>
@@ -48,8 +48,8 @@
 <% end %>
     <div class=" visible-lg col-lg-2">
       <div class="">
-    <a href="#" id="<%=m.id%>"  rel="popover" data-content="<%=m.ad["Plot"]%>" data-original-title="<%=m.title%>">
-        <img class="imgdiv" src="<%=m.ad["Poster"]%>"/>
+    <a href="/show/<%=m.id%>">
+        <img class="sm-poster imgdiv" src="<%=m.ad["Poster"]%>"/>
         <h4><%=m.title%></h4>
     </a>
   </div></div>
