--- a/week2/omdb_mini_project/public/css/style.css
+++ b/week2/omdb_mini_project/public/css/style.css
@@ -1,6 +1,6 @@
 body {
     padding-top: 70px;
-    background-color: white;
+    background-color: #f2f2f2;
 }
 
 .imgdiv {
@@ -8,8 +8,49 @@ body {
     height: 100%;
 }
   
-.navbar .btn-navbar {
-    display: none;
+.title-form {
+    display: inline-flex;
+}
+.form-control {
+    margin-right: 15px;
+    margin-top: 8px;
+}
+.search-form-div {
+    margin-right: 10px;
+}
+
+.btn { 
+    width: 90px;
+    text-align: center;
+}
+
+.poster {
+    margin: 0 auto;
+    border: 6px solid white;
+    border-radius: 2px;
+    box-shadow: 0px 1px 2px #969696;
+}
+
+.sm-poster {
+    margin: 0 auto;
+    border: 4px solid white;
+    border-radius: 2px;
+    box-shadow: 0px 1px 2px #969696;
+}
+
+.container {
+    max-width: 70%;
+}
+
+.desc {
+    overflow:hidden;
+    padding:10px;
+    width:100%;
+}
+
+.main {
+    width: 100%;
+    padding: 10px;
 }
 /*.row {
     padding: 0 10 0 10;
