--- a/week2/omdb_mini_project/views/layout.erb
+++ b/week2/omdb_mini_project/views/layout.erb
@@ -10,17 +10,17 @@
     <title>Movie Finder</title>
 </head>
 <body>
-    <nav class="navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="navbar-header">
-    <a class="navbar-brand" href="#">Movie Finder</a>
-    <form class="navbar-form navbar-left" role="search" action="/" method="POST">
-      <div class="form-group">
-        <input type="text" class="form-control" name="s" placeholder="">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+<div class="navbar-inverse navbar-fixed-top">
+    <div class="navbar-header pull-left">
+      <a class="navbar-brand hidden-xs" href="/">Movie Finder</a>
+    </div>
+    <div class="navbar-header pull-right search-form-div">
+      <form class="title-form" method="Post" action="/" role="search">
+        <input type="text" class="form-control" name="s" placeholder="Title">
+        <button type="submit" class="btn btn-default navbar-btn">Search</button>
     </form>
-  </div>
-</nav>
+    </div>
+</div>
     <%= yield %>
 </body>
 </html>
