--- a/week3/tue/route_app/app/views/planes/index.html.erb
+++ b/week3/tue/route_app/app/views/planes/index.html.erb
@@ -1,10 +1,10 @@
-Hello, Pilots!
+Hello, Pilots!<br><br>
 <% @planes.each do |plane| %>
 
     <div>
         Name: <%= plane[:name] %> <br>
         Engine Type: <%= plane[:engine_type] %> <br>
         Description: <%= plane[:description] %>
-    </div>
+    </div><br/>
 
 <% end %>
