--- a/week3/wed/movie/app/views/movies/_form_new.html.erb
+++ b/week3/wed/movie/app/views/movies/_form_new.html.erb
@@ -1,5 +1,6 @@
 <%= form_for :movie, url: new_movie_path do |f| %>
   <%= label_tag(:title, "Title:") %> <%= f.text_field :title %></br>
+  <%= label_tag(:description, "Description:") %> <%= f.text_field :description %></br>
   <%= label_tag(:year, "Year:") %> <%= f.text_field :year %></br>
   <%= f.submit "Create" %>
 <% end %>
