--- a/week3/ritly/app/views/urls/show.html.erb
+++ b/week3/ritly/app/views/urls/show.html.erb
@@ -1,5 +1,6 @@
 <h1>Show url page</h1><br/>
 id:    <%=@url.id%><br/>
-long:  <%=@url.long%><br/>
+long:  <a href="<%=@url.long%>"><%=@url.long%></a><br/>
 short: <%=@url.short%><br/>
-views: <%=@url.views%>
+views: <%=@url.views%><br/>
+user_id:<%=@url.user_id%><br/>
