Created show _url partial

--- a/week3/ritly/app/views/urls/show.html.erb
+++ b/week3/ritly/app/views/urls/show.html.erb
@@ -1,6 +1,2 @@
 <h1>Show url page</h1><br/>
-id:    <%=@url.id%><br/>
-long:  <a href="<%=@url.long%>"><%=@url.long%></a><br/>
-short: <%=@url.short%><br/>
-views: <%=@url.views%><br/>
-user_id:<%=@url.user_id%><br/>
+<%= render @url %>
