--- a/week3/ritly/app/assets/stylesheets/style.css
+++ b/week3/ritly/app/assets/stylesheets/style.css
@@ -1,4 +1,100 @@
+body {
+	background-color: #f2f2f2;
+	font-family: 'Lato', sans-serif;
+}
 .container {
 	max-width: 80%;
 	margin: 0 auto;
+	padding-bottom: 20px;
+}
+
+h1 {
+	font-size: 4em;
+	font-weight: 100;
+	padding-top: 20px;
+}
+
+.form-div {
+	margin: 0 auto;
+	text-align: center;
+	padding: 20px;
+}
+
+input{
+  padding:8px;
+  margin-bottom: 20px;
+  width:500px;
+  font-size:16px;
+  top:1px;
+  position:relative;
+  margin-right:1px;
+}
+input:focus{
+  outline:1px solid #444;
+}
+.myButton {
+	background-color:#44c767;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
+	border:1px solid #20b32d;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:arial;
+	font-size:17px;
+	padding:8px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+	background-color:#58A358;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+  outline:none;
+}
+.myButton:focus{
+  outline:none;
+}
+
+
+.old-link{
+  border-radius:4px;
+  background:#fff;
+  display:block;
+  width:600px;
+  height:50px;
+  margin:10px auto 0px auto;
+  border:1px solid #ccc;
+  padding:20px;
+}
+a{
+  color:#2764D6;
+  font-weight:600;
+  margin-bottom:10px;
+  display:inline-block;
+  position:relative;
+}
+.long-link{
+  color:#666;
+}
+
+.new-link{
+  border-radius:4px;
+  background:#fff;
+  display:block;
+  width:400px;
+  margin:10px auto 0px auto;
+  border:1px solid #ccc;
+  padding:20px;
+}
+.new-link .long-link{
+  margin-bottom:10px;
+  display:inline-block;
+  position:relative;
+}
+.num{
+  font-weight:600;
 }
