--- a/week4/mon/wdi6_cook_book_blank/app/views/users/show.html.erb
+++ b/week4/mon/wdi6_cook_book_blank/app/views/users/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="row">
+    <aside class="span4">
+        <section>
+      <h3><%= @user.name %></h3>
+      <h3><%= @user.email %></h3>
+    </section>
+    </aside>
+</div>
