--- a/week4/mon/wdi6_cook_book_blank/app/views/layouts/_header.html.erb
+++ b/week4/mon/wdi6_cook_book_blank/app/views/layouts/_header.html.erb
@@ -5,7 +5,10 @@
         <ul class="nav pull-left">
           <li><h4>Le Cook Book App</h4></li>
         </ul>
-        
+        <ul class="nav pull-right">
+          <li><%= link_to "Sign up", signup_path %></li>
+          <li><%= link_to "Sign in", signin_path %></li>
+        </ul>
       </nav>
     </div>
   </div>
