--- a/week4/mon/ritly_with_auth/app/views/urls/index.html.erb
+++ b/week4/mon/ritly_with_auth/app/views/urls/index.html.erb
@@ -1,7 +1,7 @@
 <div class="form-div">
 <h1 classs="ritly">Ritly</h1>
 <form action="/" method="POST">
-    <input class="link-input" type=text name="url[long]" placeholder="http://"/>
+    <input class="link-input" type=text name="url[long]" placeholder="http://"/ autofocus="on">
     <button class="myButton">Submit</button>
     <%= token_tag form_authenticity_token %>
 </form>
