--- a/week4/mon/ritly_with_auth/app/assets/stylesheets/bootstrap.css
+++ b/week4/mon/ritly_with_auth/app/assets/stylesheets/bootstrap.css
@@ -4412,14 +4412,14 @@ textarea.input-group-sm > .input-group-btn > .btn {
   overflow-y: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 0px) {
   .navbar-collapse {
     width: auto;
     border-top: 0;
     box-shadow: none;
   }
   .navbar-collapse.collapse {
-    display: block !important;
+    #display: block !important;
     height: auto !important;
     padding-bottom: 0;
     overflow: visible !important;
@@ -4441,7 +4441,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-left: -15px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 0px) {
   .container > .navbar-header,
   .container > .navbar-collapse {
     margin-right: 0;
@@ -4454,7 +4454,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-width: 0 0 1px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 0px) {
   .navbar-static-top {
     border-radius: 0;
   }
@@ -4468,7 +4468,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   z-index: 1030;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 0px) {
   .navbar-fixed-top,
   .navbar-fixed-bottom {
     border-radius: 0;
@@ -4498,7 +4498,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   text-decoration: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 0px) {
   .navbar > .container .navbar-brand {
     margin-left: -15px;
   }
@@ -4528,7 +4528,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-top: 4px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 0px) {
   .navbar-toggle {
     display: none;
   }
@@ -4567,7 +4567,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 0px) {
   .navbar-nav {
     float: left;
     margin: 0;
@@ -4584,7 +4584,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 0px) {
   .navbar-left {
     float: left !important;
   }
@@ -4605,7 +4605,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 0px) {
   .navbar-form .form-group {
     display: inline-block;
     margin-bottom: 0;
@@ -4637,7 +4637,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 0px) {
   .navbar-form {
     width: auto;
     padding-top: 0;
@@ -4690,7 +4690,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-bottom: 15px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 0px) {
   .navbar-text {
     float: left;
     margin-right: 15px;
