--- a/week4/mon/ritly_with_auth/app/views/layouts/_header.html.erb
+++ b/week4/mon/ritly_with_auth/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar-inverse navbar-fixed-top">
       <div class="navbar-header pull-left">
-        <a class="navbar-brand" href="/">Ritly</a>
+        <a class="navbar-brand hidden-xs" href="/">Ritly</a>
       </div>
       <div class="navbar-header pull-right">
             <% if signed_in? %>
@@ -8,7 +8,7 @@
                 <%= link_to "Sign out", signout_path, method: "delete", class: 'sign-link' %>
               </p>
             <% else %>
-            <ul class="nav navbar-nav"><li>
+            <ul class="nav navbar-nav nav-style-list"><li>
               <%= link_to "Sign up", signup_path, class: 'sign-link'%>
             </li><li>
               <%= form_for(:session, url: sessions_path, class: 'navbar-form', role: 'login') do |f| %>
