--- a/week4/mon/ritly_with_auth/app/views/users/new.html.erb
+++ b/week4/mon/ritly_with_auth/app/views/users/new.html.erb
@@ -1,36 +1,37 @@
 <div class="signup-form">
 <h1>Sign up</h1>
 
-
     <%= form_for(@user) do |f| %>
       <% unless @user.errors.count == 0   %>
-        <div class="alert alert-error">
+        <div class="alert alert-danger">
           The form contains <%= pluralize(@user.errors.count, "error") %>.
-        </div>
-        <ul>
-        <% @user.errors.full_messages.each do |msg| %>
-          <li>* <%= msg %></li>
-        <% end %>
-        </ul>
+        
+          <ul>
+          <% @user.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
       <% end %>
+          </ul>
+        </div>
+    <% end %>
+
       <div class="form-group">
-      <%= f.label :name %>
-      <%= f.text_field :name %>
+        <%= f.label :name, class: "sign-label" %>
+        <%= f.text_field :name %>
       </div>
       <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email %>
+        <%= f.label :email, class: "sign-label" %>
+        <%= f.email_field :email %>
       </div>
       <div class="form-group">
-      <%= f.label :password %>
-      <%= f.password_field :password %>
+        <%= f.label :password, class: "sign-label" %>
+        <%= f.password_field :password %>
       </div>
       <div class="form-group">
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %>
+        <%= f.label :password_confirmation, "Confirmation", class: "sign-label" %>
+        <%= f.password_field :password_confirmation %>
       </div>
       <div class="form-group">
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+        <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
       </div>
     <% end %>
 </div>
