--- a/week4/mon/ritly_with_auth/app/views/layouts/_header.html.erb
+++ b/week4/mon/ritly_with_auth/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
       </div>
       <div class="navbar-header pull-right">
             <% if signed_in? %>
-            <p class="navbar-text navbar-right signed-in">Welcome, <%=current_user.name%>&nbsp;&nbsp;&nbsp;&nbsp;
+            <p class="navbar-text navbar-right signed-in">Welcome, <%=current_user.name%>&nbsp;&nbsp;&nbsp;&nbsp; 
+              <%=image_tag("http://www.gravatar.com/avatar.php?gravatar_id=#{Digest::MD5::hexdigest(current_user.email)}", :alt => 'Avatar', :class => 'avatar')%>
                 <%= link_to "Sign out", signout_path, method: "delete", class: 'sign-link' %>
               </p>
             <% else %>
