Frontend mostly done

--- a/week7/tue/spa_app/app/views/todos/index.html.erb
+++ b/week7/tue/spa_app/app/views/todos/index.html.erb
@@ -1,4 +1,10 @@
-<h1>Todos#index</h1>
-<p>Find me in app/views/todos/index.html.erb</p>
-<div id='testCon'>
+<h1>Todos</h1>
+
+<form id='add_todo'>
+  <input type='' id='todo_title' name='todo[title]'></input>
+</form>
+
+<div id="todos">
+  
 </div>
+
